# Geant4-absorber

./: Am241.mac  Am241_1.mac  CMakeLists.txt  CMakeSettings.json  Co60.mac  Co60_1.mac  README.md  absorber.cpp  init_vis.mac  vis.mac
include/: ActionInitialization.h  DetectorConstruction.h  DetectorMessenger.h  PrimaryGeneratorAction.h  RunAction.h  SteppingAction.h
src/: ActionInitialization.cpp  DetectorConstruction.cpp  DetectorMessenger.cpp  PrimaryGeneratorAction.cpp  RunAction.cpp  SteppingAction.cpp
